--- a/analysis.org
+++ b/analysis.org
@@ -444,7 +444,7 @@ wc -l *.ids
   hapfile <- function(chr, dataset=c("h","w"))
       switch(match.arg(dataset),
              w = sprintf("impute2/out/%s_haps", chr),
-             h = error("No need for this"))
+             h = sprintf("data/HM3/%s.hap", chr))
   posfile <- function(chr, dataset=c("h","w"))
       switch(match.arg(dataset),
              w = sprintf("pos/%s", chr),
@@ -516,6 +516,19 @@ We're going to flip WTCCC2 to match HapMap3
   }
 #+end_src
 
+*** Make pos file
+#+begin_src R
+  make.pos.files <- function() {
+      dir.create("pos")
+      for(c in chroms) {
+          pos <- scan(pipe(paste("cut -d' ' -f3 <", frdatafile(c, "w"))), what=integer())
+          cat(pos, file=file.path("pos", c), sep="\n")
+      }
+  }
+  make.pos.files()
+#+end_src
+
+  
 ** DONE Check restricted data dimensions
 
 #+begin_src sh :colnames yes
@@ -863,37 +876,6 @@ Functions to compute frequency of allele 0
    #+end_src
 ** R version
 #+begin_src R :var chunk=4000000
-  make.intervals <- function(points, width, noverlap=100) {
-      ## Return intervals with at least noverlap overlapping points at each end
-      stop("unfinished")
-      
-      starts <- ends <- integer()
-      i <- 1
-      starts[i] <- points[1]
-      while(TRUE) {
-          ends[i] <- starts[i] + width
-          n <- sum(points >= starts[i] & points <= ends[i])
-      }
-  
-  }
-  
-  make.pos.files <- function() {
-      dir.create("pos")
-      for(c in chroms) {
-          pos <- scan(pipe(paste("cut -d' ' -f3 <", frdatafile(c, "w"))), what=integer())
-          cat(pos, file=file.path("pos", c), sep="\n")
-      }
-  }
-  
-  qsub.script <- function(cmd, name, outfile, errfile)
-      paste("#$ -N ", name, "\n",
-            "#$ -o ", outfile, "\n",
-            "#$ -e ", errfile, "\n",
-            "#$ -cwd", "\n",
-            "#$ -V", "\n",
-            cmd, "\n",
-            sep="")
-  
   Ne <- 11418
   for(c in chroms) {
       outdir <- file.path("impute2", "cmds", c)
@@ -903,19 +885,17 @@ Functions to compute frequency of allele 0
       dir.create(stdoutdir, recursive=TRUE)
       dir.create(stderrdir, recursive=TRUE)
       pos <- scan(posfile(c, "w"))
-      starts <- seq(min(pos), max(pos), by=chunk)
-      if(overlap)
-      ends <- c(starts[-1] - 1, max(pos))
-      for(i in seq_along(starts)) {
+      intervals <- make.intervals(pos, width=chunk, overlap=chunk/10)
+      for(i in seq(nrow(intervals))) {
           cmd <-
               paste("impute2",
                     "-phase",
-                    "-m", rmapfile(c, "h"),
-                    "-h", frdatafile(c, "h"),
-                    "-l", rlegendfile(c, "h"),
+                    "-m", mapfile(c, "h"),
+                    "-h", hapfile(c, "h"),
+                    "-l", legendfile(c, "h"),
                     "-g", frdatafile(c, "w"),
                     "-strand_g", rstrandfile(c),
-                    "-int", starts[i], ends[i],
+                    "-int", intervals[i,"start"], intervals[i,"end"],
                     "-Ne", Ne,
                     "-o", file.path("impute2", "out", c, i))
           cat(qsub.script(cmd,
@@ -925,11 +905,11 @@ Functions to compute frequency of allele 0
               file=file.path(outdir, sprintf("%03d.sh", i)))
       }
   }
-  
 #+end_src
 
 #+results:
 
+** Stitch haplotypes
 * TODO Sample lists
 
   POBI+MS files have 8267 individuals
