--- a/analysis.org
+++ b/analysis.org
@@ -979,7 +979,7 @@ Functions to compute frequency of allele 0
     #+end_src
 
 ** Test phasing
-*** Run twice on same input
+*** DONE Run twice on same input
 #+begin_src sh
 for i in 1 2 ; do
   impute2 -phase \
@@ -995,14 +995,14 @@ for i in 1 2 ; do
       -buffer 1000 \
       -exclude_snps_g snpexclude/22 \
       -Ne 11418 \
-      -burnin 0 \
-      -iter 1 \
       -o impute2-test/$i
 done
+      # -burnin 0 \
+      # -iter 1 \
 #+end_src
-
-*** Check haplotypes
+**** Check haplotypes
 #+begin_src R :var hfile1="impute2-test/1_haps" :var hfile2="impute2-test/2_haps" :var chrom=22 :var reg="Poland" :var int0=29284399 :var int1=33284399 :results output replace
+  date()
   ids.pop <- indivs.d$ID_1[indivs.d$reg2 == reg]
   h1 <- read.haplotypes(hfile1, ids=ids.pop)
   h2 <- read.haplotypes(hfile2, ids=ids.pop)
@@ -1019,16 +1019,21 @@ done
 #+results:
 #+begin_example
 
+[1] "Sat Sep 25 13:45:18 2010"
  Read 1018 items
 Read 118088 items
+Warning message:
+closing unused connection 3 (cut -d ' ' -f 2 < impute2-test/1_haps)
 Read 1018 items
 Read 118088 items
-2 genotypes disagree out of 59044 
-These are in 2 out of 58 individuals
-and involve 2 out of 1018 SNPs
-The first bad genotype is individual 35 SNP 976 :
-         89789_B04 89789_B04 89789_B04 89789_B04
-rs130896         0         1         0         0
+Warning messages:
+1: closing unused connection 3 (cut -d ' ' -f 2 < impute2-test/2_haps) 
+2: closing unused connection 4 (cut -d ' ' -f 6- < impute2-test/1_haps)
+Warning message:
+closing unused connection 5 (cut -d ' ' -f 6- < impute2-test/2_haps)
+ Comparing haplotypes
+null device 
+          1
 #+end_example
 
 ** Stitch haplotypes
